<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".AreaDisplayActivity"
    tools:showIn="@layout/activity_area_display"
    android:orientation="vertical"
    android:layout_marginStart="@dimen/layout_margin">



    <LinearLayout
        android:id="@+id/weather_section"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="@dimen/section_margin_bottom">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/weather_label" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/sub_section_margin"
            android:text="@string/description_label" />
        <LinearLayout
            android:id="@+id/description_section"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/sub_section_margin"
            android:paddingStart="@dimen/sub_section_margin"
            android:orientation="vertical"
            android:paddingEnd="0dp">
            <TextView
                android:id="@+id/short_desc_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                 />
            <TextView
                android:id="@+id/long_desc_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                 />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/temperature_section"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/sub_section_margin"
            android:paddingEnd="0dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/temperature_label"
                android:layout_marginEnd="@dimen/label_value_margin"/>
            <TextView
                android:id="@+id/temperature_val_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_number_value" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/humidity_section"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/sub_section_margin"
            android:paddingEnd="0dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/humidity_label"
                android:layout_marginEnd="@dimen/label_value_margin"/>
            <TextView
                android:id="@+id/humidity_val_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_number_value" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/pressure_section"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/sub_section_margin"
            android:paddingEnd="0dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pressure_label"
                android:layout_marginEnd="@dimen/label_value_margin"/>
            <TextView
                android:id="@+id/pressure_val_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_number_value" />
        </LinearLayout>

    </LinearLayout>


    <LinearLayout
        android:id="@+id/wind_section"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="@dimen/section_margin_bottom">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/wind_label" />

        <LinearLayout
            android:id="@+id/speed_section"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/sub_section_margin"
            android:paddingEnd="0dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/speed_label"
                android:layout_marginEnd="@dimen/label_value_margin"/>
            <TextView
                android:id="@+id/speed_val_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_number_value" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/degrees_section"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/sub_section_margin"
            android:paddingEnd="0dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/degrees_label"
                android:layout_marginEnd="@dimen/label_value_margin"/>
            <TextView
                android:id="@+id/degrees_val_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_number_value" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/cloud_section"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/section_margin_bottom"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cloud_label"
            android:layout_marginEnd="@dimen/label_value_margin"/>
        <TextView
            android:id="@+id/cloud_val_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_number_value"
            android:layout_marginEnd="@dimen/label_value_margin"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/percentage"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/rainy_section"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/section_margin_bottom">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rainy_label"
            android:layout_marginEnd="@dimen/label_value_margin"/>
        <CheckBox
            android:id="@+id/rainy_val_cb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="false"
             />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/last_update_section"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/section_margin_bottom">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/last_update_label"
            android:layout_marginEnd="@dimen/label_value_margin"/>
        <TextView
            android:id="@+id/last_update_val_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_number_value"
            android:layout_marginEnd="@dimen/label_value_margin"/>
    </LinearLayout>




</LinearLayout>